--- a/vignettes/L3-Variants.Rmd
+++ b/vignettes/L3-Variants.Rmd
@@ -37,7 +37,17 @@ suppressPackageStartupMessages({
   [VariantAnnotation][], [VariantFiltering][].
 
 
-# Presentation: Variant Calling Work Flows
+# Presentation: Variant Calling
+
+## Overall work flow
+
+Work flow
+
+Particular challenges
+
+Standard software tools
+
+## _Bioconductor_ opportunities
 
 # Called Variants
 
@@ -77,15 +87,69 @@ Reference
 
 ### What is a VCF file?
 
+Header
 
+    ##fileformat=VCFv4.2
+    ##fileDate=20090805
+    ##source=myImputationProgramV3.1
+    ##reference=file:///seq/references/1000GenomesPilot-NCBI36.fasta
+    ##contig=<ID=20,length=62435964,assembly=B36,md5=f126cdf8a6e0c7f379d618ff66beb2da,species="Homo sapiens",taxonomy=x>
+    ##phasing=partial
+    ##INFO=<ID=DP,Number=1,Type=Integer,Description="Total Depth">
+    ##INFO=<ID=AF,Number=A,Type=Float,Description="Allele Frequency">
+    ...
+    ##FILTER=<ID=q10,Description="Quality below 10">
+    ##FILTER=<ID=s50,Description="Less than 50% of samples have data">
+    ...
+    ##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
+    ##FORMAT=<ID=GQ,Number=1,Type=Integer,Description="Genotype Quality">
+        
+Location
 
-### Input
+    #CHROM POS     ID        REF    ALT     QUAL FILTER ...
+    20     14370   rs6054257 G      A       29   PASS   ...
+    20     17330   .         T      A       3    q10    ...
+    20     1110696 rs6040355 A      G,T     67   PASS   ...
+    20     1230237 .         T      .       47   PASS   ...
+    20     1234567 microsat1 GTC    G,GTCT  50   PASS   ...
+        
+Variant INFO
+
+    #CHROM POS     ...	INFO                              ...
+    20     14370   ...	NS=3;DP=14;AF=0.5;DB;H2           ...
+    20     17330   ...	NS=3;DP=11;AF=0.017               ...
+    20     1110696 ...	NS=2;DP=10;AF=0.333,0.667;AA=T;DB ...
+    20     1230237 ...	NS=3;DP=13;AA=T                   ...
+    20     1234567 ...	NS=3;DP=9;AA=G                    ...
+  
+Genotype FORMAT and samples
+
+    ... POS     ...  FORMAT      NA00001        NA00002        NA00003
+    ... 14370   ...  GT:GQ:DP:HQ 0|0:48:1:51,51 1|0:48:8:51,51 1/1:43:5:.,.
+    ... 17330   ...  GT:GQ:DP:HQ 0|0:49:3:58,50 0|1:3:5:65,3   0/0:41:3
+    ... 1110696 ...  GT:GQ:DP:HQ 1|2:21:6:23,27 2|1:2:0:18,2   2/2:35:4
+    ... 1230237 ...  GT:GQ:DP:HQ 0|0:54:7:56,60 0|0:48:4:51,51 0/0:61:2
+    ... 1234567 ...  GT:GQ:DP    0/1:35:4       0/2:17:2       1/1:40:3
+
+### Input and manipulation
+
+Input and manipulation: [VariantAnnotation][] `readVcf()`,
 
 Headers
 
+- `scanVcfHeader()`
+
 Data
 
+- `readVcf()`
+- Accessors, e.g., `info()`, `geno()`
+
 Restrictions
+
+- `readInfo()`: simple vector of 
+- `readGeno()`: simple matrix of genotypes
+- `ScanVcfParam()`, 
+- 'tabix' indexing for coordinate-based access
 
 Chunks
 
@@ -109,19 +173,19 @@ Built-in
 - Read variants from a VCF file, and annotate with respect to a known
   gene model
   
-```{r vcf, message=FALSE}
-## input variants
-library(VariantAnnotation)
-fl <- system.file("extdata", "chr22.vcf.gz", package="VariantAnnotation")
-vcf <- readVcf(fl, "hg19")
-seqlevels(vcf) <- "chr22"
-## known gene model
-library(TxDb.Hsapiens.UCSC.hg19.knownGene)
-coding <- locateVariants(rowRanges(vcf),
-    TxDb.Hsapiens.UCSC.hg19.knownGene,
-    CodingVariants())
-head(coding)
-```
+    ```{r vcf, message=FALSE}
+    ## input variants
+    library(VariantAnnotation)
+    fl <- system.file("extdata", "chr22.vcf.gz", package="VariantAnnotation")
+    vcf <- readVcf(fl, "hg19")
+    seqlevels(vcf) <- "chr22"
+    ## known gene model
+    library(TxDb.Hsapiens.UCSC.hg19.knownGene)
+    coding <- locateVariants(rowRanges(vcf),
+        TxDb.Hsapiens.UCSC.hg19.knownGene,
+        CodingVariants())
+    head(coding)
+    ```
 
 Via additional resources
 
@@ -131,99 +195,92 @@ Via additional resources
 
 ### Filtering
 
-VCF files can be large, and it can be difficult to precisely formulate
-an appropriate restriction to efficiently limit the amount of
-input. One strategy is to filter the VCF to contain a subset of
-variants that are likely to be of interest to you. The
-[VariantAnnotation][] package offers two types of filters, andthese
-can be combined.
+- Common practice to create intermediate files with variants of
+  interest
+- Pre-filters: simple text-based search of each line. Fast but error-prone
 
-#### Prefilters
+    ```{r}
+    isGermlinePrefilter <- function(x) {
+        grepl("Germline", x, fixed=TRUE)
+    }
+    
+    notInDbsnpPrefilter <- function(x) {
+        !(grepl("dbsnp", x, fixed=TRUE))
+    }
+    ```
 
-Prefilters are conceptually very simple.  They are functions which
-will be called with a single argument, a vector of character strings,
-each of which is an _unparsed_ variant call line, as read from the
-input VCF file.  We use `grepl()` to return a logical vector equal in
-length to the incoming vector of unparsed VCF lines.  Each prefilter
-and filter is called repeatedly, with `yieldSize` lines supplied on
-each invocation.  `filterVcf()` calls these functions repeatedly until
-the input file is exhausted.
+- Filters: precise specification of variants to keep
 
-Notice how the logic of these prefilters is very simple, using
-`grepl()` to do fast, simple, fixed pattern matching:
+    ```{r}
+    ## We will use isSNV() to filter only SNVs
+    
+    allelicDepth <- function(x) {
+        ##  ratio of AD of the "alternate allele" for the tumor sample
+        ##  OR "reference allele" for normal samples to total reads for
+        ##  the sample should be greater than some threshold (say 0.1,
+        ##  that is: at least 10% of the sample should have the allele
+        ##  of interest)
+        ad <- geno(x)$AD
+        tumorPct <- ad[,1,2,drop=FALSE] / rowSums(ad[,1,,drop=FALSE])
+        normPct <- ad[,2,1, drop=FALSE] / rowSums(ad[,2,,drop=FALSE])
+        test <- (tumorPct > 0.1) | (normPct > 0.1)
+        as.vector(!is.na(test) & test)
+    }
+    ```
+    
+- `FilterRules()` collects several filters, filters can be easily
+  turned on and off, statsitics can be collected.
 
-```{r}
-isGermlinePrefilter <- function(x) {
-    grepl("Germline", x, fixed=TRUE)
-}
+    ```{r}
+    prefilters <- FilterRules(list(germline=isGermlinePrefilter, 
+                                   dbsnp=notInDbsnpPrefilter))
+    filters <- FilterRules(list(isSNV=isSNV, AD=allelicDepth))
+    ```
 
-notInDbsnpPrefilter <- function(x) {
-    !(grepl("dbsnp", x, fixed=TRUE))
-}
-```
+- `filterVcf()`: sepcify source and destination files and filters
 
-#### Filters
+    ```{r}
+    file.gz     <- system.file("extdata", "chr7-sub.vcf.gz", 
+                               package="VariantAnnotation")
+    file.gz.tbi <- system.file("extdata", "chr7-sub.vcf.gz.tbi", 
+                               package="VariantAnnotation")
+    destination.file <- "filtered.vcf"
+    tabix.file <- VcfFile(file.gz, yieldSize=10000)
+    filterVcf(tabix.file,  "hg19", destination.file,
+              prefilters=prefilters, filters=filters, verbose=TRUE)
+    ```
 
-Filters are more sophisticated than prefilters in that they assess
-_parsed_ variant call lines for possible inclusion.  Such parsing is
-intrinsically expensive but will be performed only on those lines
-which passed the prefilters.  Therefore it pays to eliminate as many
-lines as possible using prefilters.  Filters are useful when there
-exists detailed criteria for inclusion and exclusion.  This can be
-seen below, especially in the `allelicDepth()` function. Each filter
-must be written to return a logical vector as long as the number of
-rows in the input VCF argument; be sure your filter works with 0-row
-VCF instances.
+### Integration with _AnnotationHub_ and _GenomicFeatures_
 
-```{r}
-## We will use isSNV() to filter only SNVs
+E.g., any SNPs in ENCODE regulatory marks?
 
-allelicDepth <- function(x) {
-    ##  ratio of AD of the "alternate allele" for the tumor sample
-    ##  OR "reference allele" for normal samples to total reads for
-    ##  the sample should be greater than some threshold (say 0.1,
-    ##  that is: at least 10% of the sample should have the allele
-    ##  of interest)
-    ad <- geno(x)$AD
-    tumorPct <- ad[,1,2,drop=FALSE] / rowSums(ad[,1,,drop=FALSE])
-    normPct <- ad[,2,1, drop=FALSE] / rowSums(ad[,2,,drop=FALSE])
-    test <- (tumorPct > 0.1) | (normPct > 0.1)
-    as.vector(!is.na(test) & test)
-}
-```
+- CTCF Transcription Factor Binding Regions Identified in MCF-7 Breast
+  Cancer Cell Line
 
-#### _FilterRules_
+    ```{r}
+    library(AnnotationHub)
+    hub <- AnnotationHub()
+    id <- names(query(hub, "wgEncodeUwTfbsMcf7CtcfStdPkRep1.narrowPeak"))
+    mcf7.gr <- hub[[id]]
+    mcf7.gr
+    ```
 
-The `FilterRules()` function allow you to combine a list of filters,
-or of prefilters so that they may be passed as parameters to
-`filterVcf()`.  We use them here to combine the
-`isGermlinePrefilter()` with the `notInDbsnpPrefilter()`, and the
-`isSNV()` with the `AD` filter.
+- Do filtered SNPs (from previous exercise) overlap any binding sites?
 
-```{r}
-prefilters <- FilterRules(list(germline=isGermlinePrefilter, 
-                               dbsnp=notInDbsnpPrefilter))
-filters <- FilterRules(list(isSNV=isSNV, AD=allelicDepth))
-```
+    ```{r}
+    vcf <- readVcf(destination.file, "hg19")
+    seqlevels(vcf) <- paste("chr", seqlevels(vcf), sep="")
+    ov.mcf7 <- findOverlaps(vcf, mcf7.gr)
+    ov.mcf7
+    ```
+    
+- What part of the gene are they in?
 
-We then run the filter by identifying the path to the VCF file and
-it's index, specifying the destination, and indicating the chunk size
-to process using a `VcfFile()` with `yieldSize`.
-
-```
-file.gz     <- system.file("extdata", "chr7-sub.vcf.gz", 
-                           package="VariantAnnotation")
-file.gz.tbi <- system.file("extdata", "chr7-sub.vcf.gz.tbi", 
-                           package="VariantAnnotation")
-destination.file <- tempfile()
-tabix.file <- VcfFile(file.gz, yieldSize=10000)
-filterVcf(tabix.file,  "hg19", destination.file,
-          prefilters=prefilters, filters=filters, verbose=TRUE)
-```
-
-### Integration with _AnnotationHub_
-
-
+    ```{r}
+    library(TxDb.Hsapiens.UCSC.hg19.knownGene)
+    txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene 
+    locateVariants(vcf[6,], txdb, AllVariants())
+    ```
 
 ## Lab: _VariantFiltering_
 
